--- a/nealcaren.web.unc.edu/TextAnalysis Sentiment .ipynb
+++ b/nealcaren.web.unc.edu/TextAnalysis Sentiment .ipynb
@@ -10,7 +10,10 @@
      "cell_type": "code", 
      "collapsed": true, 
      "input": [
+      "from __future__ import division", 
       "import urllib", 
+      "import csv", 
+      "from string import punctuation", 
       "import os.path", 
       "import sys", 
       "", 
