Added ipython notebook checkpoints to .gitignore and modified the Sentiment.ipynb to v4

--- a/nealcaren.web.unc.edu/TextAnalysis Sentiment .ipynb
+++ b/nealcaren.web.unc.edu/TextAnalysis Sentiment .ipynb
@@ -1,90 +1,106 @@
 {
- "metadata": {
-  "name": "TextAnalysis Sentiment "
- }, 
- "nbformat": 2, 
- "worksheets": [
+ "cells": [
   {
-   "cells": [
-    {
-     "cell_type": "code", 
-     "collapsed": true, 
-     "input": [
-      "from __future__ import division", 
-      "import urllib", 
-      "import csv", 
-      "from string import punctuation", 
-      "import os.path", 
-      "import sys", 
-      "", 
-      "files=['negative.txt','positive.txt','obama_tweets.txt']", 
-      "path='http://www.unc.edu/~ncaren/haphazard/'", 
-      "for file_name in files:", 
-      "    if os.path.isfile(file_name) != True:      #if file doesn't exist", 
-      "        urllib.urlretrieve(path+file_name,file_name)"
-     ], 
-     "language": "python", 
-     "outputs": [], 
-     "prompt_number": 12
-    }, 
-    {
-     "cell_type": "code", 
-     "collapsed": true, 
-     "input": [
-      "try:", 
-      "    tweets = open(\"obama_tweets.txt\").read()", 
-      "    tweets_list = tweets.split('\\n')", 
-      "    ", 
-      "    pos_sent = open(\"positive.txt\").read()", 
-      "    positive_words=pos_sent.split('\\n')", 
-      "    positive_counts=[]", 
-      "    ", 
-      "    neg_sent = open('negative.txt').read()", 
-      "    negative_words=neg_sent.split('\\n')", 
-      "    negative_counts=[]", 
-      "except IOException as e:", 
-      "    print('File(s) not found')", 
-      "    sys.exit(1)"
-     ], 
-     "language": "python", 
-     "outputs": [], 
-     "prompt_number": 13
-    }, 
-    {
-     "cell_type": "code", 
-     "collapsed": true, 
-     "input": [
-      "for tweet in tweets_list:", 
-      "    positive_counter=0", 
-      "    negative_counter=0", 
-      "    ", 
-      "    tweet_processed=tweet.lower()", 
-      "    ", 
-      "    ", 
-      "    for p in list(punctuation):", 
-      "        tweet_processed=tweet_processed.replace(p,'')", 
-      "", 
-      "    words=tweet_processed.split(' ')", 
-      "    word_count=len(words)", 
-      "    for word in words:", 
-      "        if word in positive_words:", 
-      "            positive_counter=positive_counter+1", 
-      "        elif word in negative_words:", 
-      "            negative_counter=negative_counter+1", 
-      "        ", 
-      "    positive_counts.append(positive_counter/word_count)", 
-      "    negative_counts.append(negative_counter/word_count)", 
-      "", 
-      "output=zip(tweets_list,positive_counts,negative_counts)", 
-      "", 
-      "writer = csv.writer(open('tweet_sentiment.csv', 'wb'))", 
-      "writer.writerows(output)"
-     ], 
-     "language": "python", 
-     "outputs": [], 
-     "prompt_number": 14
-    }
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from __future__ import division\n",
+    "import urllib\n",
+    "import csv\n",
+    "from string import punctuation\n",
+    "import os.path\n",
+    "import sys\n",
+    "\n",
+    "files=['negative.txt','positive.txt','obama_tweets.txt']\n",
+    "path='http://www.unc.edu/~ncaren/haphazard/'\n",
+    "for file_name in files:\n",
+    "    if os.path.isfile(file_name) != True:      #if file doesn't exist\n",
+    "        urllib.urlretrieve(path+file_name,file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    tweets = open(\"obama_tweets.txt\").read()\n",
+    "    tweets_list = tweets.split('\\n')\n",
+    "    \n",
+    "    pos_sent = open(\"positive.txt\").read()\n",
+    "    positive_words=pos_sent.split('\\n')\n",
+    "    positive_counts=[]\n",
+    "    \n",
+    "    neg_sent = open('negative.txt').read()\n",
+    "    negative_words=neg_sent.split('\\n')\n",
+    "    negative_counts=[]\n",
+    "except IOException as e:\n",
+    "    print('File(s) not found')\n",
+    "    sys.exit(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for tweet in tweets_list:\n",
+    "    positive_counter=0\n",
+    "    negative_counter=0\n",
+    "    \n",
+    "    tweet_processed=tweet.lower()\n",
+    "    \n",
+    "    \n",
+    "    for p in list(punctuation):\n",
+    "        tweet_processed=tweet_processed.replace(p,'')\n",
+    "\n",
+    "    words=tweet_processed.split(' ')\n",
+    "    word_count=len(words)\n",
+    "    for word in words:\n",
+    "        if word in positive_words:\n",
+    "            positive_counter=positive_counter+1\n",
+    "        elif word in negative_words:\n",
+    "            negative_counter=negative_counter+1\n",
+    "        \n",
+    "    positive_counts.append(positive_counter/word_count)\n",
+    "    negative_counts.append(negative_counter/word_count)\n",
+    "\n",
+    "output=zip(tweets_list,positive_counts,negative_counts)\n",
+    "\n",
+    "writer = csv.writer(open('tweet_sentiment.csv', 'wb'))\n",
+    "writer.writerows(output)"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.4.1"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
